src/test/deca/syntax/invalid/resultats/test7_string-synt.res
./src/test/deca/syntax/invalid/test7_string.deca:10:0: token recognition error at: '"chaine pas finie'
